--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,6 +1,16 @@
 import "../styles.css";
 import "nextra-theme-docs/style.css";
+import { Inter } from "@next/font/google";
+
+export const inter = Inter({
+  subsets: ['latin'],
+  variable: '--font-inter',
+})
 
 export default function App({ Component, pageProps }) {
-  return <Component {...pageProps} />
+  return (
+    <main className={`${inter.variable} font-sans`}>
+      <Component {...pageProps} />
+    </main>
+  )
 }
