--- a/pages/docs/guides/customize-app-config.mdx
+++ b/pages/docs/guides/customize-app-config.mdx
@@ -1,18 +1,25 @@
+import { Callout, FileTree } from 'nextra-theme-docs'
+
 # Customize app config
-### Use case
+
+## Overview
+
+In this guide, we'll show you how to customize the configuration of an app by overriding the default `docker-compose.yml` and `app.env` files.
+
+## Example use cases
 
 - Set `Pihole` to listen on a custom IP address
-- Mount an existing volume on your host into a media app such as `Jellyfin`
-    - By default, media apps will only be able to see files within `runtipi/media`, but you can add other volumes.
+- Mount an existing volume on your host into a media app such as `Jellyfin`. *By default, media apps will only be able to see files within `runtipi/media`, but you can add other volumes.*
 
 An alternative approach to mounting a volume into an app would be to symlink your host volume into `runtipi/media`. However, that would make it visible to all apps that mount the `media` folder, which may not be desirable.
 
-### Create custom docker config
+## Create custom docker config
 
 In this example we're going to add environment variables to the `Pihole` app and mount the `/cellar` volume into the `Jellyfin` app.
 
 To determine how to set environment variables to customize the `Pihole` container, we look at `runtipi/apps/pihole/docker-compose.yml`:
-```
+
+```yml
 ports:
   - ${NETWORK_INTERFACE:-0.0.0.0}:53:53/tcp
   - ${NETWORK_INTERFACE:-0.0.0.0}:53:53/udp
@@ -21,81 +28,92 @@ ports:
 
 From this, we know that we need to set the `NETWORK_INTERFACE` variable.
 
-> Don't edit the files in the `apps` folder directly; they will be overwritten on update.
+<Callout>
+  Don't edit the files in the `apps` folder directly; they will be overwritten on update.
+</Callout>
 
 1. Create `user-config` folder within `runtipi` and a folder for each app:
-    ```
-    # cd runtipi
-    # mkdir user-config
-    # mkdir user-config/jellyfin
-    # mkdir user-config/pihole
-    ```
+```bash
+cd runtipi
+mkdir user-config
+mkdir user-config/jellyfin
+mkdir user-config/pihole
+```
 
 2. Create a `docker-compose.yml` for `jellyfin` and add this content:
-    ```
-    # touch user-config/jellyfin/docker-compose.yml
-    # nano user-config/jellyfin/docker-compose.yml
-    ```
 
-    ```
-    version: "3.7"
-    services:
-      jellyfin:
-        volumes:
-          - /cellar:/cellar
-    ```
+```bash
+touch user-config/jellyfin/docker-compose.yml
+nano user-config/jellyfin/docker-compose.yml
+```
 
-    > Replace `/cellar` with the volume you want to mount.
+```yml
+version: "3.7"
+services:
+  jellyfin:
+    volumes:
+      - /cellar:/cellar
+```
+
+<Callout>
+  Replace `/cellar` with the volume you want to mount.
+</Callout>
 
 3. Create an `app.env` for `pihole` and add this content:
-    ```
-    # touch user-config/pihole/app.env
-    # nano user-config/pihole/app.env
-    ```
 
-    ```
-    NETWORK_INTERFACE=10.20.0.53
-    ```
+```bash
+touch user-config/pihole/app.env
+nano user-config/pihole/app.env
+```
 
-    > Replace `10.20.0.53` with the IP address you want pihole to listen on.
+```conf
+NETWORK_INTERFACE=10.20.0.53
+```
+
+<Callout>
+  Replace `10.20.0.53` with the IP address you want pihole to listen on.
+</Callout>
 
 4. You should end up with a structure like this:
-    ```
-    runtipi
-    |
-    ├───app-data
-    ├───apps
-    ├───  ...other folders...
-    |
-    └───user-config
-        |
-        ├───jellyfin
-        |       docker-compose.yml
-        |
-        └───pihole
-                app.env
-    ```
+
+<FileTree>
+    <FileTree.Folder name="runtipi" defaultOpen>
+        <FileTree.Folder name="app-data" />
+        <FileTree.Folder name="apps" />
+        <FileTree.Folder name="user-config" defaultOpen>
+            <FileTree.Folder name="jellyfin" defaultOpen>
+                <FileTree.File name="docker-compose.yml" />
+            </FileTree.Folder>
+            <FileTree.Folder name="pihole" defaultOpen>
+                <FileTree.File name="app.env" />
+            </FileTree.Folder>
+        </FileTree.Folder>
+    </FileTree.Folder>
+</FileTree>
 
 5. Restart the apps and test:
-    ```
-    # ./scripts/app.sh stop jellyfin
-    # ./scripts/app.sh stop pihole
-    # ./scripts/app.sh start jellyfin
-    # ./scripts/app.sh start pihole
-    ```
 
-    - Test Jellyfin by opening the app and configuring a library. You should now see your mounted volume.
-    - Test Pihole with a DNS query to the new IP address:
-        ```
-        # nslookup google.com 10.20.0.53
+```bash
+./scripts/app.sh stop jellyfin
+./scripts/app.sh stop pihole
+./scripts/app.sh start jellyfin
+./scripts/app.sh start pihole
+```
 
-        Server:         10.20.0.53
-        Address:        10.20.0.53#53
+- Test Jellyfin by opening the app and configuring a library. You should now see your mounted volume.
+- Test Pihole with a DNS query to the new IP address:
 
-        Non-authoritative answer:
-        Name:   google.com
-        Address: 142.250.200.46
-        Name:   google.com
-        Address: 2a00:1450:4009:822::200e
-        ```
+```bash
+nslookup google.com 10.20.0.53
+```
 
+```
+Server:         10.20.0.53
+Address:        10.20.0.53#53
+
+Non-authoritative answer:
+Name:   google.com
+Address: 142.250.200.46
+Name:   google.com
+Address: 2a00:1450:4009:822::200e
+```
