--- a/pages/docs/guides/start-on-system-boot.mdx
+++ b/pages/docs/guides/start-on-system-boot.mdx
@@ -51,6 +51,12 @@ Replace `/usr/bin/runtipi` with the full path to wherever you installed Tipi.
 sudo systemctl daemon-reload
 ```
 
+### Enable the service:
+
+```bash
+sudo systemctl enable tipi
+```
+
 ### Test the service configuration:
 
 ```bash
