--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,4 +1,5 @@
 import "../styles.css";
+import { Analytics } from '@vercel/analytics/react';
 import "nextra-theme-docs/style.css";
 import { Inter } from "@next/font/google";
 
@@ -11,6 +12,7 @@ export default function App({ Component, pageProps }) {
   return (
     <main className={`${inter.variable} font-sans`}>
       <Component {...pageProps} />
+      <Analytics />
     </main>
   )
 }
