Update Ports and fix json formatting

--- a/pages/docs/contributing/adding-a-new-app.mdx
+++ b/pages/docs/contributing/adding-a-new-app.mdx
@@ -72,6 +72,8 @@ Available categories : `utilities`, `network`, `media`, `development`, `automati
 
 If you want to add a new category, please open a new issue.
 
+When choosing a port, please make sure that it is not in use already. You can check [tipi.community/app-db](https://tipi.community/app-db) for an updated list. Feel free to let us know if there are any missing ones!
+
 In the same folder, create a `docker-compose.yml` file with your app config.
 
 ```yml
