--- a/pages/docs/reference/folder-structure.mdx
+++ b/pages/docs/reference/folder-structure.mdx
@@ -10,7 +10,7 @@ Here is a look at the folder structure after installation:
         <FileTree.Folder name="apps" />
         <FileTree.Folder name="app-data" />
         <FileTree.Folder name="logs" />
-        <FileTree.Folder name="media">
+        <FileTree.Folder name="media" defaultClosed>
             <FileTree.Folder name="books" />
             <FileTree.Folder name="images" />
             <FileTree.Folder name="movies" />
