--- a/pages/docs/reference/folder-structure.mdx
+++ b/pages/docs/reference/folder-structure.mdx
@@ -10,7 +10,16 @@ Here is a look at the folder structure after installation:
         <FileTree.Folder name="apps" />
         <FileTree.Folder name="app-data" />
         <FileTree.Folder name="logs" />
-        <FileTree.Folder name="media" />
+        <FileTree.Folder name="media" defaultClosed>
+            <FileTree.Folder name="data" defaultClosed>
+                <FileTree.Folder name="books" />
+                <FileTree.Folder name="images" />
+                <FileTree.Folder name="movies" />
+                <FileTree.Folder name="podcasts" />
+                <FileTree.Folder name="roms" />
+                <FileTree.Folder name="tv" />
+            </FileTree.Folder>
+        </FileTree.Folder>
         <FileTree.Folder name="repos" />
         <FileTree.Folder name="scripts" />
         <FileTree.Folder name="state" />
