--- a/pages/docs/reference/folder-structure.mdx
+++ b/pages/docs/reference/folder-structure.mdx
@@ -13,11 +13,28 @@ Here is a look at the folder structure after installation:
         <FileTree.Folder name="media" defaultClosed>
             <FileTree.Folder name="data" defaultClosed>
                 <FileTree.Folder name="books" />
+                <FileTree.Folder name="comics" />
                 <FileTree.Folder name="images" />
                 <FileTree.Folder name="movies" />
+                <FileTree.Folder name="music" />
                 <FileTree.Folder name="podcasts" />
                 <FileTree.Folder name="roms" />
                 <FileTree.Folder name="tv" />
+            </FileTree.Folder>
+            <FileTree.Folder name="downloads" defaultClosed>
+                <FileTree.Folder name="watch" />
+                <FileTree.Folder name="completed" />
+                <FileTree.Folder name="incomplete" />
+            </FileTree.Folder>
+            <FileTree.Folder name="torrents" defaultClosed>
+                <FileTree.Folder name="watch" />
+                <FileTree.Folder name="completed" />
+                <FileTree.Folder name="incomplete" />
+            </FileTree.Folder>
+            <FileTree.Folder name="usenet" defaultClosed>
+                <FileTree.Folder name="watch" />
+                <FileTree.Folder name="completed" />
+                <FileTree.Folder name="incomplete" />
             </FileTree.Folder>
         </FileTree.Folder>
         <FileTree.Folder name="repos" />
