chore: replace urls with runtipi.io

--- a/pages/docs/getting-started/installation.mdx
+++ b/pages/docs/getting-started/installation.mdx
@@ -19,7 +19,13 @@ Run `docker compose version` to check if it is installed. Instructions to instal
 Download the latest version of Tipi:
 
 ```bash
-curl -L https://setup.runtipi.com | bash
+curl -L https://setup.runtipi.io | bash
+```
+
+If you have some issue with the command above, you can also download the script directly from github:
+  
+```bash
+curl -L https://raw.githubusercontent.com/meienberger/runtipi/master/scripts/install.sh | bash
 ```
 
 The script will prompt you the ip address of the dashboard once configured.
