docs: improve docs about adding a new app

--- a/pages/docs/contributing/running-locally.mdx
+++ b/pages/docs/contributing/running-locally.mdx
@@ -28,7 +28,7 @@ When you have finished developing and stopped the server, the apps you've instal
 ## Using your own appstore repo
 You can change the repository Tipi is using to retrieve the appstore in order to test new apps you added.
 
-Create a `settings.json` file in the `state` folder (`runtipi/state/settings.json`) containing the URL of your repo
+Create a `settings.json` file in the `state` folder (`runtipi/state/settings.json`) containing the URL of your repo and restart Tipi.
 
 ```json
 {
