--- a/pages/docs/contributing/adding-a-new-app.mdx
+++ b/pages/docs/contributing/adding-a-new-app.mdx
@@ -68,7 +68,12 @@ Create a new `config.json` file inside the newly create folder
 }
 ```
 
-Available categories : `utilities`, `network`, `media`, `development`, `automation`, `social`, `utilities`, `photography`, `security`, `featured`, `books`, `data`, `music`, `finance`
+<Callout type="warning">
+  Be sure to remove the comments from the example above an that the final content is a valid JSON format. You can easily check for validity in an online tool like [JSONLint](https://jsonlint.com/)
+</Callout>
+
+
+Available categories : `utilities`, `network`, `media`, `development`, `automation`, `social`, `utilities`, `photography`, `security`, `featured`, `books`, `data`, `music`, `finance`, `ai`
 
 If you want to add a new category, please open a new issue.
 
@@ -209,3 +214,8 @@ You can now submit a pull request to the repository.
 - On GitHub, visit your repository and click on the "Pull requests" tab.
 - Click on "New pull request" and fill in the title and description.
 - Choose your branch and target the main repository at `meienberger/runtipi-appstore`.
+
+## Test your app in your own instance
+
+Before submitting your app, you can test it in your own instance. You can do so by adding your app repository to the `appsRepoUrl` property in the `settings.json` file.
+Visit the [Using your own appstore repo](/docs/contributing/running-locally#using-your-own-appstore-repo) section to learn more.
