fix: extra comma in json example

--- a/pages/docs/contributing/adding-a-new-app.mdx
+++ b/pages/docs/contributing/adding-a-new-app.mdx
@@ -74,7 +74,6 @@ Create a new `config.json` file inside the newly create folder
   Be sure to remove the comments from the example above an that the final content is a valid JSON format. You can easily check for validity in an online tool like [JSONLint](https://jsonlint.com/)
 </Callout>
 
-
 Available categories : `utilities`, `network`, `media`, `development`, `automation`, `social`, `utilities`, `photography`, `security`, `featured`, `books`, `data`, `music`, `finance`, `ai`
 
 Other options for the `config.json` file are:
@@ -212,7 +211,7 @@ You can also define a multi select field. This will be rendered as a dropdown in
     { "label": "Banana", "value": "banana" },
     { "label": "Orange", "value": "orange" },
   ],
-  "env_variable": "fruits",
+  "env_variable": "fruits"
 }
 ```
 
