feat: link apps available to official source code

--- a/pages/docs/contributing/adding-a-new-app.mdx
+++ b/pages/docs/contributing/adding-a-new-app.mdx
@@ -9,7 +9,7 @@ In order to proceed you should be familiar working with the Terminal and Git.
 In this guide, we will explain how to add a new app to the Runtipi App Store. The process is pretty simple and should take you less than 20 minutes. 
 
 ### Prerequisites
-- The app you want to add is free and open-source
+- The app you want to add is free and open-source (or at least source available with a permissive license for personal use)
 - The app you want to add has an official and maintained docker image
 
 
