docs: local ssl certificates

--- a/pages/docs/getting-started/custom-settings.mdx
+++ b/pages/docs/getting-started/custom-settings.mdx
@@ -25,4 +25,5 @@ You can change the default settings by creating a `settings.json` file. The file
 | `sslPort`    | The port to use for the dashboard with SSL                  | `443`             |
 | `listenIp`   | The IP address to listen on                                 | `automatically detected` |
 | `storagePath`| The path to use for storing data                            | `runtipi/app-data`|
+| `localDomain`    | The domain name to use for local services                    | `tipi.lan`           |
 
