refactor: remove legacy --port explaination

--- a/pages/docs/getting-started/installation.mdx
+++ b/pages/docs/getting-started/installation.mdx
@@ -39,11 +39,8 @@ cd runtipi
 sudo ./scripts/start.sh
 ```
 
-Tipi will run by default on port 80. To select another port you can run the start script with the `--port` argument
-
-```bash
-sudo ./scripts/start.sh --port 7000
-```
+Tipi will run by default on port 80. To select another port you can create a `settings.json` file in the `state` folder.
+See the [Custom Settings](/docs/getting-started/custom-settings) section for more information.
 
 To stop Tipi, run the stop script.
 
