docs: update guides to describe new cli usage

--- a/pages/docs/contributing/running-locally.mdx
+++ b/pages/docs/contributing/running-locally.mdx
@@ -19,11 +19,8 @@ Install the project dependencies
 
 ## Run Tipi
 1. Start the app with `npm run start:dev` from the root folder
+2. Start the watcher with `npm run dev:watcher` from the root folder
 2. Visit `localhost:3000` in your browser
-
-## Stopping
-When you have finished developing and stopped the server, the apps you've installed will still be running in their containers. To stop them and remove the images run:
-`sudo ./scripts/stop.sh`
 
 ## Using your own appstore repo
 You can change the repository Tipi is using to retrieve the appstore in order to test new apps you added.
