--- a/pages/docs/guides/uninstalling.mdx
+++ b/pages/docs/guides/uninstalling.mdx
@@ -3,7 +3,7 @@
 Make sure Tipi is completely stopped and then remove the `runtipi` directory.
 
 ```bash
-sudo ./scripts/stop.sh
+sudo ./runtipi-cli stop
 cd ..
 sudo rm -rf runtipi
 ```
