--- a/pages/docs/guides/updating.mdx
+++ b/pages/docs/guides/updating.mdx
@@ -3,5 +3,5 @@
 To update Tipi to the latest version, run the following command from the `runtipi` directory:
 
 ```bash
-sudo ./scripts/system.sh update
+./runtipi-cli update
 ```
