--- a/pages/docs/reference/architecture.mdx
+++ b/pages/docs/reference/architecture.mdx
@@ -16,8 +16,10 @@ Runtipi is built using a modern web architecture and emphasizes on end-to-end ty
 - [TypeScript](https://www.typescriptlang.org/) - Typed superset of JavaScript
 - [Next.js](https://nextjs.org/) - React framework for server-side rendering and static site generation
 - [tRPC](https://trpc.io/) - Type safe API layer
-- [Prisma](https://www.prisma.io/) - Database toolkit
+- [Drizzle-ORM](https://orm.drizzle.team/) - Type safe ORM
 - [PostgreSQL](https://www.postgresql.org/) - Database
+- [Redis](https://redis.io/) - In-memory data structure store
+- [BullMQ](https://docs.bullmq.io/) - Job queueing system
 
 ## Reverse Proxy
 
