docs: fix various elements

--- a/pages/docs/getting-started/installation.mdx
+++ b/pages/docs/getting-started/installation.mdx
@@ -46,7 +46,7 @@ issues may occur.
 Download the latest version of Tipi:
 
 ```bash
-curl -L https://setup.runtipi.io | sudo bash
+curl -L https://setup.runtipi.io | bash
 ```
 
 If you have some issue with the command above, you can also download the script directly from github:
@@ -62,14 +62,14 @@ This command updates tipi to the latest version available.
 You can update to the latest version with this command:
 
 ```bash
-./runtipi-cli update
+sudo ./runtipi-cli update
 ```
 
 If you want to specify a specific version to update or downgrade to you can use the command 
 like this:
 
 ```bash
-./runtipi-cli update v2.0.7
+sudo ./runtipi-cli update v2.0.7
 ```
 
 <Callout type="warning">
