--- a/pages/docs/contributing/running-locally.mdx
+++ b/pages/docs/contributing/running-locally.mdx
@@ -17,6 +17,13 @@ Tipi uses `pnpm` as a package manager and monorepo orchestrator. Install it with
 Install the project dependencies
 `pnpm i`
 
+## Edit the envs
+
+You need to copy `.env.exemple` to `.env` and edit there following env
+
+- ROOT_FOLDER_HOST change to put your root folder of runtipi
+- STORAGE_PATH change to put your storage folder of runtipi 
+
 ## Run Tipi
 1. Start the app with `npm run start:dev` from the root folder
 2. Start the watcher with `npm run dev:watcher` from the root folder
